Add timeout to google maps initialization in spot controller.  Necessary to make map show on backbutton or intially click.  Really anything but page refresh.  Not sure why it isn't necessary for listings page.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -75,7 +75,7 @@
         fit="false"
         events="eventsProperty"
         refresh="!isMapElementHidden"
-        style="height: 300px; width: 280; border: 1px solid;">
+        style="height: 300px; width: 280px; border: 1px solid;">
       </div> 
     </div>
   </div>
