--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -51,7 +51,7 @@
         fit="false"
         events="eventsProperty"
         refresh="!isMapElementHidden"
-        style="height: 260px; width: 280; border: 1px solid;">
+        style="height: 260px; width: 280px; border: 1px solid;">
       </div> 
     </div>
   </div>
