--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,30 @@
 <div id="main-page">
 
+    <!-- Header
+    ================================================== -->
+    <div class="header">
+      <a href="#/">
+        <img class="logo" src="images/b4cm-logo.png">
+        <div class="title">
+          <h2 class="before">Crowd</h2>
+          <h2 class="criticalmass">Factor</h2>
+        </div>
+      </a>
+      <div class="tag-line">
+        <h4 class="yelp">"If you like Yelp,</h4>
+        <h4 class="hate">but hate a crowd."</h4>
+      </div>
+      <!-- AddThis Button BEGIN -->
+      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+        <a class="addthis_button_preferred_1"></a>
+        <a class="addthis_button_preferred_2"></a>
+        <a class="addthis_button_compact"></a>
+        <a class="addthis_counter addthis_bubble_style"></a>
+      </div>
+<!-- AddThis Button END -->
+    </div>
+    <hr>
+
   <div class="spot-types">
     <div class="spots-tagline">
       <img class="arrow-side" src="../images/arrow-left.png">
@@ -373,6 +398,7 @@
               <br>6) Low hanging fruit performance optimizations: sprites, minification, cdn.
               <br>7) Find some design help: logo, icons, site, visualizations. 
               <br>8) Filter results by type, rating, current status (any of the five). 
+              <br>9) Fill in subpage information.
               
               <br><br>Suggestions welcomed…
             </p>
