Remove second log on main page and just use tagline.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,16 +3,9 @@
     <!-- Header
     ================================================== -->
     <div class="header">
-      <a href="#/">
-        <img class="logo" src="images/b4cm-logo.png">
-        <div class="title">
-          <h2 class="before">Crowd</h2>
-          <h2 class="criticalmass">Factor</h2>
-        </div>
-      </a>
       <div class="tag-line">
-        <h4 class="yelp">"If you like Yelp,</h4>
-        <h4 class="hate">but hate a crowd."</h4>
+        <h3 class="find">"You choose...</h3>
+        <h3 class="dodge">Find a crowd or dodge a crowd."</h3>
       </div>
       <!-- AddThis Button BEGIN -->
       <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
