--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -352,9 +352,11 @@ input[type='text']:focus {
   background-color: $acc-light;
   border-radius: 0 0 10px 10px;
   padding: 5px 0;
+  text-align: left;
 
   .logo {
-    margin-top: -44px;
+    height: 35px;
+    width: 280px;
   }
 
   .before {
@@ -371,17 +373,30 @@ input[type='text']:focus {
     text-decoration: none;
   }
 
+  .title {
+    vertical-align: top;
+    color: $comp2-dark;
+   }
+
+  .about {
+    color: $comp1-dark;
+   }
+
   .tag-line {
-    float: right;
-    padding: 15px 560px 0 0;
+    text-align: left;
+    vertical-align: top;
+    padding-left: 100px;
   }
 
-  .yelp {
-    margin: 0;
+  .find {
   }
 
-  .hate {
-    margin: 0 0 0 24px;
+  .dodge {
+    margin-left: 50px;
+  }
+
+  .choice {
+    margin-left: 100px;
   }
 
   div {
@@ -390,7 +405,8 @@ input[type='text']:focus {
 
   .addthis_toolbox {
     float: right;
-    margin: -65px 10px 0 0;
+    //margin: -65px 10px 0 0;
+    vertical-align: top;
   }
 }
 
