--- a/app/views/main.html
+++ b/app/views/main.html
@@ -70,17 +70,17 @@
 
   <div class="visualize">
     <div class="visualize-tagline">
-      <h2><span class="emphasize">"Visualize</span> the herd and learn the best</h2>
+      <h2><span class="emphasize">"Visualize</span> the crowd and learn the best</h2>
       <h2>times to go to your favorite places."</h2>
     </div>
 
     <div class="crowd-factor">
-      <h3>Current Time: <span class="current-time empty">Tuesday, 11pm</span></h3>
+      <h3>Current Time: <span class="current-time empty">Tuesday, 11am</span></h3>
       <h4>73 Watchers</h4>
-      <button type="button" class="btn" ng-click="addWatch()">Add Herd Watch</button>
+      <button type="button" class="btn">Add Herd Watch</button>
       <div class="crowd-visuals">
         <div class="timeslot">
-          <h5>Morning</h5>
+          <h5>morning</h5>
           <table class="morning-table">
             <tr>
               <th></th>
@@ -157,7 +157,7 @@
           </table>
         </div>
         <div class="timeslot">
-          <h5>Afternoon</h5>
+          <h5>afternoon</h5>
           <table class="afternoon-table">
             <tr>
               <th></th>
@@ -234,7 +234,7 @@
           </table>
         </div>
         <div class="timeslot">
-          <h5>Evening</h5>
+          <h5>evening</h5>
           <table class="evening-table">
             <tr>
               <th></th>
@@ -310,6 +310,7 @@
             </tr>
           </table>
         </div>
+
         <div class="labels">
           <div class="row1">
             <div class="empty">
@@ -326,6 +327,11 @@
               <div class="herd-square color">
               </div>
               <h5>Herd Alert</h5>
+            </div>
+            <div class="none">
+              <div class="none-square color">
+              </div>
+              <h5>No Watches</h5>
             </div>
           </div>
           <br>
@@ -349,8 +355,8 @@
         </div>
       </div>
     </div>
-  </div>
-
+  </div> 
+  
 </div>
 
     <script type="text/ng-template" id="myModalContent.html">
