Change tagline and move closer together.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,8 +4,8 @@
     ================================================== -->
     <div class="header">
       <div class="tag-line">
-        <h3 class="find">"You choose...</h3>
-        <h3 class="dodge">Find a crowd or dodge a crowd."</h3>
+        <h3 class="find">"Crowdabout helps you find a crowd</h3>
+        <h3 class="dodge">or avoid a crowd... it's your choice."</h3>
       </div>
       <!-- AddThis Button BEGIN -->
       <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
