--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -389,6 +389,7 @@ input[type='text']:focus {
   }
 
   .find {
+    margin-bottom: -20px;
   }
 
   .dodge {
@@ -590,6 +591,7 @@ input[type='text']:focus {
     background-color: $acc-light;
     border-radius: 10px;
     padding: 20px 10px;
+    min-height: 300px;
   }
   
   .listings {
