--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,1 +1,42 @@
-<p>This is the welcome view.</p>
+<div id="welcome-page">
+<h3>Condition Alpha: Test</h3>
+        <div>
+          <p>Welcome.  This site is barely 1 month old, and like my baby daughter may puke on itself.  It is a public alpha release for Coursera's Startup Engineering course. If you are intrigued by the idea of finding out how crowded your favorite places are, please feel free to help in any of the following ways:</p>
+          <ul>
+
+            <li><span class="help-item">Report Bugs</span> - The site is still undergoing rapid development and testing.  Please report any issues by shooting us an email at poof@coding4kicks.com</li>
+
+            <li><span class="help-item">Donate</span> - This site was built as part of Coursera's startup engineering course.  By donating a little bit of bitcoin you can help make a tool that lets you avoid crowds, or find them, or whatever you like.  Link coming soon!</li>
+
+            <li><span class="help-item">Tweet or Like</span> - As mentioned above, this site is on Coursear's Startup Engineering course's leader board.  One of the metrics is Tweets.  Help us get the word out and climb the leader board.  Support people knowing about crowds!</li>
+              <li><span class="help-item">Sign Up and Enter Data</span> - While we are working on ways to help automate crowd detection, this site depends upon data, so any help is appreciated. 
+              <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Enter a spot</span> - input your favorite places to go so people can start watching the crowds.
+              <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Write a review</span> - let others know about the places you like for Food, Study, or Social and what the crowds are like.
+              <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Add a CrowdWatch</span> - alert others to the ebb and flow of crowds.  
+              <br>If we all work together we can avoid crowds or find them, whichever you prefer.</li>
+              <li><span class="help-item">Join The Effort</span> - Reach out to us on <a href="https://github.com/coding4kicks/b4cm">github</a> or <a href="http://www.builditwith.me/">builditwith.me</a>.</li>
+            </ul>          
+            <p>Thank you.  And thanks to Firebase, Angular, Coursera for help making this 1 month prototype possible.  And please don't hesitate to email us with any questions: poof@coding4kicks.com.
+
+            <br><br>Regards,
+              
+              <br><br>Scott 
+              
+              <br><br>P.S.  This pop-up will self-destruct in two weeks after alpha.
+              
+              <br><br>P.P.S.
+              <br>Current List of features required for Beta:
+              <br>1) Enable alternate logon methods.
+              <br>2) User info page: reviews, password reset, gravatar account, etc.
+              <br>3) Display user pictures from: gravatar, fb, twitter.
+              <br>4) Optimize for mobile
+              <br>5) Design & implement crowd-status meter as a visualization for the current crowd-status.
+              <br>6) Low hanging fruit performance optimizations: sprites, minification, cdn.
+              <br>7) Find some design help: logo, icons, site, visualizations. 
+              <br>8) Filter results by type, rating, current status (any of the five). 
+              <br>9) Fill in subpage information.
+              
+              <br><br>Suggestions welcomed…
+            </p>
+          </div>
+</div>
