Add sign in/up notification to welcome page.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -951,6 +951,10 @@ input[type='text']:focus {
   background-color: $acc-light;
   border-radius: 10px;
   padding: 10px 0 10px 20px;
+
+  .sign-in-notification {
+    color: $comp2-dark;
+  }
 }
 
 /******************
