--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,4 +1,5 @@
 <div id="welcome-page">
+<h4 class="sign-in-notification">You are now signed in.</h4>
 <h3>Condition Alpha: Test</h3>
         <div>
           <p>Welcome.  This site is barely 1 month old, and like my baby daughter may puke on itself.  It is a public alpha release for Coursera's Startup Engineering course. If you are intrigued by the idea of finding out how crowded your favorite places are, please feel free to help in any of the following ways:</p>
