--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -21,9 +21,11 @@
 
             <br><br>Regards,
               
-              <br><br>Scott 
+            <br><br>Scott 
+            <br>
+            <hr>
               
-              <br><br>P.S.  This pop-up will self-destruct in two weeks after alpha.
+              <br>P.S.  This pop-up will self-destruct in two weeks after alpha.
               
               <br><br>P.P.S.
               <br>Current List of features required for Beta:
