--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1231,3 +1231,12 @@ input[type='text']:focus {
       font-style: italic;
   }
 }
+
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
