Add about page.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,8 +1,8 @@
 <div id="about-page">
-<h4 class="sign-in-notification">You are now signed in.</h4>
-<h3>Condition Alpha: Test</h3>
-        <div>
-          <p>Welcome.  This site is barely 1 month old, and like my baby daughter may puke on itself.  It is a public alpha release for Coursera's Startup Engineering course. If you are intrigued by the idea of finding out how crowded your favorite places are, please feel free to help in any of the following ways:</p>
+<div>
+  <p>Welcome</p>
+          <p>Crowdabout is an application to help you understand how crowded your favorites spots are, whether it’s a restaurant, café, or bar.   The types of spots are broken down into food, social, and study (or work if you prefer).   See when a bar is going off if you are looking for a scene.  See when a coffee shop is almost empty if you are looking for a quiet place to study.  Use Crowdabout to take control of your encounters with crowds.  Knowledge is power!</p>
+          <p>This site is barely 1 month old, and like my baby daughter may puke on itself.  It is a public alpha release for Coursera's Startup Engineering course. If you are intrigued by the idea of finding out how crowded your favorite places are, please feel free to help in any of the following ways:</p>
           <ul>
 
             <li><span class="help-item">Report Bugs</span> - The site is still undergoing rapid development and testing.  Please report any issues by shooting us an email at poof@coding4kicks.com</li>
@@ -14,8 +14,8 @@
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Enter a spot</span> - input your favorite places to go so people can start watching the crowds.
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Write a review</span> - let others know about the places you like for Food, Study, or Social and what the crowds are like.
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Add a CrowdWatch</span> - alert others to the ebb and flow of crowds.  
-              <br>If we all work together we can avoid crowds or find them, whichever you prefer.</li>
-              <li><span class="help-item">Join The Effort</span> - Reach out to us on <a href="https://github.com/coding4kicks/b4cm">github</a> or <a href="http://www.builditwith.me/">builditwith.me</a>.</li>
+              <br>If we all work together we can avoid crowds or find them, whichever you prefer.  Check out our FAQ for suggestions on entering data.</li>
+              <li><span class="help-item">Join The Effort</span> - Reach out to us on <a href="https://github.com/coding4kicks/b4cm">github</a>.</li>
             </ul>          
             <p>Thank you.  And thanks to Firebase, Angular, Coursera for help making this 1 month prototype possible.  And please don't hesitate to email us with any questions: poof@coding4kicks.com.
 
@@ -24,10 +24,8 @@
             <br><br>Scott 
             <br>
             <hr>
-              
-              <br>P.S.  This pop-up will self-destruct in two weeks after alpha.
-              
-              <br><br>P.P.S.
+                            
+              <br><br>P.S.
               <br>Current List of features required for Beta:
               <br>1) Enable alternate logon methods.
               <br>2) User info page: reviews, password reset, gravatar account, etc.
