--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1113,6 +1113,18 @@ input[type='text']:focus {
   background-color: $acc-light;
   border-radius: 10px;
   padding: 20px;
+
+  .sign-in-notification {
+    color: $comp2-dark;
+  }
+
+  .help-item {
+      font-weight: bold;
+    }
+  .data-item {
+      font-style: italic;
+  }
+
 }
 
 /******************
