Remove builditwithme and pop up reference.

--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -15,7 +15,7 @@
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Write a review</span> - let others know about the places you like for Food, Study, or Social and what the crowds are like.
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Add a CrowdWatch</span> - alert others to the ebb and flow of crowds.  
               <br>If we all work together we can avoid crowds or find them, whichever you prefer.</li>
-              <li><span class="help-item">Join The Effort</span> - Reach out to us on <a href="https://github.com/coding4kicks/b4cm">github</a> or <a href="http://www.builditwith.me/">builditwith.me</a>.</li>
+              <li><span class="help-item">Join The Effort</span> - Reach out to us on <a href="https://github.com/coding4kicks/b4cm">github</a>.</li>
             </ul>          
             <p>Thank you.  And thanks to Firebase, Angular, Coursera for help making this 1 month prototype possible.  And please don't hesitate to email us with any questions: poof@coding4kicks.com.
 
@@ -24,10 +24,8 @@
             <br><br>Scott 
             <br>
             <hr>
-              
-              <br>P.S.  This pop-up will self-destruct in two weeks after alpha.
-              
-              <br><br>P.P.S.
+                            
+              <br><br>P.S.
               <br>Current List of features required for Beta:
               <br>1) Enable alternate logon methods.
               <br>2) User info page: reviews, password reset, gravatar account, etc.
