Add privacy and terms data.  Add header to about.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,7 @@
 <div id="about-page">
-<div>
-  <p>Welcome</p>
+  <div>
+  <h3>About</h3>
+  <p>Welcome,</p>
           <p>Crowdabout is an application to help you understand how crowded your favorites spots are, whether it’s a restaurant, café, or bar.   The types of spots are broken down into food, social, and study (or work if you prefer).   See when a bar is going off if you are looking for a scene.  See when a coffee shop is almost empty if you are looking for a quiet place to study.  Use Crowdabout to take control of your encounters with crowds.  Knowledge is power!</p>
           <p>This site is barely 1 month old, and like my baby daughter may puke on itself.  It is a public alpha release for Coursera's Startup Engineering course. If you are intrigued by the idea of finding out how crowded your favorite places are, please feel free to help in any of the following ways:</p>
           <ul>
