--- a/app/views/privacy.html
+++ b/app/views/privacy.html
@@ -1,3 +1,5 @@
 <div id="privacy-page">
+  <h3>Privacy</h3>
+  <p>Your online identity is yours, whether it’s your real data or the fake super hero persona you’re trying to portray.  We promise not to ever sell, rent, or give away any personal identifiable information.</p>
 </div>
 
