--- a/app/views/terms.html
+++ b/app/views/terms.html
@@ -1,3 +1,7 @@
 <div id="terms-page">
+  <h3>Terms of Service.</h3>
+
+  <p>Please behave yourself.  We make no promises regarding anything.  The site is still undergoing rapid development and testing so things my not work.  We will strive to preserve all data entered.  Please help out by reporting any issues you encounter.</p>
+  
 </div>
 
