--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1113,6 +1113,7 @@ input[type='text']:focus {
   background-color: $acc-light;
   border-radius: 10px;
   padding: 20px;
+  min-height: 400px;
 
   .sign-in-notification {
     color: $comp2-dark;
