--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,3 +1,6 @@
 <div id="contact-page">
+  <h3>Contact</h3>
+  <p>Feel free to reach out with any questions, concerns, ideas, or whatever flotsam and jetsam crosses your mind regarding Crowdabout.  
+  <h4>sigint: poof@coding4kicks.com.</h4>
 </div>
 
