--- a/app/views/advertise.html
+++ b/app/views/advertise.html
@@ -1,3 +1,9 @@
 <div id="advertise-page">
+  <h3>Advertise</h3>
+  <p>While we currently aren’t offering advertising, by filling out the crowd watch information for your establishment and keeping current watches, you are doing a service to your customers.   They can determine the best times to enjoy your offerings.  Let them know if you are packed or empty so that they can make informed decisions.</p>
+
+  <p>In the future, we plan to offer location and status based advertising.  So if your establishment is in a slow period, you can offer specials to those customers who are looking for a spot that isn’t too crowded, or if a crowd is forming you can pass updates to customers who are looking for a scene.  In this manner both you and the customers win.  You can keep a revenue stream during the slow hours with customers who enjoy a quieter environment and you can spread the word about when the crowds are forming for customers looking for a scene.</p>
+
+  <p>We are openly seeking partnerships, so please contact us with any questions.</p>
 </div>
 
