--- a/app/views/faq.html
+++ b/app/views/faq.html
@@ -1,3 +1,44 @@
 <div id="faq-page">
+  <h3>FAQ</h3>
+  <h4>What is Crowdabout?</h4>
+
+  <p>An application to show you how crowded (or empty) your favorite places are.</p>
+
+  <h4>What is a spot?</h4>
+
+  <p>A spot is some sort of establishment.  It may be a business, but not necessarily.  Libraries are a perfect example of study spots.</p>
+
+  <h4>Why are there only three types of spots?</h4>
+
+  <p>Because we wanted to maintain focus.  Food, Social and Study (or work) encompass three of the main reasons for going out.  We may add catchall for other types later so you can find when things like your local gym are crowded.</p>
+
+  <h4>Why is it Study, I’m not a student?</h4>
+
+  <p>A place you go to study is likely the same type of place you would go to work.  We figured people would rather think about it in terms of study.  What’s worse homework or work?  Perhaps study is the lesser of two evils.</p>
+
+  <h4>What’s the best way to enter data?</h4>
+
+  <p>Enter the spots you visit regularly and want to know how crowded they are at any given time.  Then ask an employee about when the place is crowded.  Enter this into the crowd watches.  While it’s not quite as good as a live crowd watch, some data is better than no data, and you can now use the crowd map to help plan when you hit up your favorite places.</p>
+
+  <h4>Why did you build Crowdabout?</h4>
+
+  <p>Initially, to avoid crowds.  I wanted to be able to go to a coffee shop, get a drink, and find a table.  I wanted to be able to go to a bar, not wait in line for a drink, and hear the conversation.  I wanted to be able to go to a restaurant and not have to wait for a table.  Yet after talking to people, I realized Crowdabout could be used in reverse.  If you are going out and want to find out where the scene is at, look for crowded and packed, maybe even see if the crowd watch is current.</p>
+
+  <h4>What is a crowd watch?</h4>
+
+  <p>A crowd watch is when someone updates the crowd status of a spot.</p>
+
+  <h4>What is a current crowd watch?</h4>
+
+  <p>If someone adds a crowd watch within the last hour it is considered current and that is displayed on both the listings page and the spot page.  If it is older, the status is marked historical as the information is being pulled from ‘historical’ data.</p>
+
+  <h4>What do the different crowd statuses mean?</h4>
+
+  <p>Any given status is kind of a judgment call.  You know a place is empty when hardly anyone is there.  When you wait in line, can’t get a seat, or are elbow to elbow, the place is packed.  For few versus average versus crowded, just make your best guess.</p>
+
+  <h4>What is a crowd map?</h4>
+
+  <p>The crowd map is the visualization depicting how crowded a restaurant is over a given week.  This way you can learn if a place is empty in the mornings or packed on the weekend.  Use the crowd map to hit up your favorite places at the times that appeal most to you.</p>
+  
 </div>
 
