Add cursor for alt login method hover.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -935,6 +935,10 @@ input[type='text']:focus {
     div {
       text-align: center;
     }
+
+    .login-method:hover {
+      cursor: pointer;
+    }
   }
 }
 
