Add temp alert that alternate signup/in methods will be available for beta.

--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -26,16 +26,16 @@
   <div class="third-party-signup">
     <h4>Or sign-in using another account</h4>
     <div>
-      <div class="login-method facebook">
+      <div class="login-method facebook" ng-click="tempAlert()">
         <a><div class="icon"></div>Facebook</a>
       </div>
-      <div class="login-method twitter">
+      <div class="login-method twitter" ng-click="tempAlert()">
         <a><div class="icon"></div>Twitter</a>
       </div>
-      <div class="login-method github">
+      <div class="login-method github" ng-click="tempAlert()">
         <a><div class="icon"></div>Github</a>
       </div>
-      <div class="login-method persona">
+      <div class="login-method persona" ng-click="tempAlert()">
         <a><div class="icon"></div>Persona</a>
       </div>
     </div>  
