Future broadcast so status updates in realtime.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -21,6 +21,7 @@
         <div class="current-status">
           <h3>Current Status: <span class="status {{current_cflabel | lowercase}}">{{current_cflabel}}</span></h3>
           <h5>({{current_status}})</h5>
+          <p>comment: {{current_comment}}</p>
         </div>
         <div class="spot-types">
           <div class="type" ng-repeat="type in types">
