--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -711,6 +711,10 @@ input[type='text']:focus {
     border-radius: 10px;
     padding: 10px 15px;
 
+    .watch-comment-header {
+      font-weight: bold;
+    }
+
     h2 {
       margin: 0 0 10px 0;
     }
@@ -720,6 +724,7 @@ input[type='text']:focus {
       float: left;
       max-width: 300px;
       margin-top: -10px;
+      vertical-align: top;
 
       h4 {
         margin-left: 10px;
@@ -733,6 +738,7 @@ input[type='text']:focus {
     .details-right {
       display: inline-block;
       margin: -20px 0 0 20px;
+      vertical-align: top;
 
       h3 {
         margin-bottom: 0;
