--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -16,7 +16,7 @@
           <div class="review-count">{{spot.review_count}} Reviews</div>
         </div>
         <div>
-          <a ng-href="{{spot.yelpLink}}"><h4>Checkout Yelp reviews:</h4></a>
+          <a ng-href="{{spot.yelpLink}}"><h4>Checkout Yelp reviews</h4></a>
         </div>
       </div>
 
