--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -731,7 +731,7 @@ input[type='text']:focus {
       }
 
       .rating {
-        margin-top: 35px;
+        margin: 30px 0 25px 0;
       }
     }
 
