--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -25,6 +25,7 @@
           <h3>Current Status: <span class="status {{current_cflabel | lowercase}}">{{current_cflabel}}</span></h3>
           <h5>({{current_status}})</h5>
           <p><span class="watch-comment-header">comment</span>: {{current_comment}}</p>
+          <h6 class="watch-user">Arbuckle</h6>
         </div>
         <div class="spot-types">
           <div class="type" ng-repeat="type in types">
