Display watch comment user's name.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -24,8 +24,7 @@
         <div class="current-status">
           <h3>Current Status: <span class="status {{current_cflabel | lowercase}}">{{current_cflabel}}</span></h3>
           <h5>({{current_status}})</h5>
-          <p><span class="watch-comment-header">comment</span>: {{current_comment}}</p>
-          <h6 class="watch-user">Arbuckle</h6>
+          <p><span class="watch-comment-header">{{current_user}} says:</span> {{current_comment}}</p>
         </div>
         <div class="spot-types">
           <div class="type" ng-repeat="type in types">
