Switch to no data from no watches

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -331,7 +331,7 @@
             <div class="none">
               <div class="none-square color">
               </div>
-              <h5>No Watches</h5>
+              <h5>No Data</h5>
             </div>
           </div>
           <br>
