Updated welcome and about.

--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -6,10 +6,7 @@
           <ul>
 
             <li><span class="help-item">Report Bugs</span> - The site is still undergoing rapid development and testing.  Please report any issues by shooting us an email at poof@coding4kicks.com</li>
-
-            <li><span class="help-item">Donate</span> - This site was built as part of Coursera's startup engineering course.  By donating a little bit of bitcoin you can help make a tool that lets you avoid crowds, or find them, or whatever you like.  Link coming soon!</li>
-
-            <li><span class="help-item">Tweet or Like</span> - As mentioned above, this site is on Coursear's Startup Engineering course's leader board.  One of the metrics is Tweets.  Help us get the word out and climb the leader board.  Support people knowing about crowds!</li>
+            <li><span class="help-item">Tweet or Like</span> - Support people knowing about crowds!  While we are in Alpha we would like to keep the site semi-private, but in a few weeks when we enter Beta, please help spread the word.</li>
               <li><span class="help-item">Sign Up and Enter Data</span> - While we are working on ways to help automate crowd detection, this site depends upon data, so any help is appreciated. 
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Enter a spot</span> - input your favorite places to go so people can start watching the crowds.
               <br>&nbsp;&nbsp;&nbsp;<span class="data-item">Write a review</span> - let others know about the places you like for Food, Study, or Social and what the crowds are like.
