--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -32,7 +32,7 @@
         <img class="spot-pic" ng-src="{{spot.image_url}}">
         <div class="info"> 
           <h4 class="title">{{spot.name}}</h4>
-          <h5 class="address">{{spot.location.address}}. {{spot.location.city}}</h5>
+          <h5 class="address">{{spot.location.address}}, {{spot.location.city}}</h5>
           <div class="rating">
             <div class="stars">
               <img ng-repeat="star in spot.stars" ng-src="{{star}}">
