Add cache list and moreSpots function to access it.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="more" ng-hide="noSpots">
-        <a>More Results</a>
+        <a ng-click="moreSpots()">More Results</a>
       </div>
     </div>
 
