--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -20,7 +20,7 @@
   <div class="page">
 
     <div class="listings main-col">
-      <h6 ng-hide="noSpots">1-{{spots.length}} of {{numReturns}}</h6>
+      <h6 ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
       <a  ng-click="addSpot()">
         <button class="btn add-spot">Add Spot</button>
       </a>
@@ -59,7 +59,7 @@
       </div>
 
       <div class="more" ng-hide="noSpots">
-        <a ng-show="displayMore" ng-click="moreSpots()">More Results</a><span ng-show="displayMore && displayPrevious">||</span><a ng-show="displayPrevious" ng-click="previousSpots()">Previous Results</a>
+        <a ng-show="displayMore" ng-click="moreSpots()">More Results</a><span ng-show="displayMore && displayPrevious"> || </span><a ng-show="displayPrevious" ng-click="previousSpots()">Previous Results</a>
       </div>
     </div>
 
