--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -5,7 +5,7 @@
     <div class="control-group">
       <label class="control-label" for="spotName">Name</label>
       <div class="controls">
-        <input class="{{validForm.name}}" type="text" id="spotName" ng-model="name" placeholder="Name">
+        <input class="{{validForm.name}}" type="text" id="spotName" ng-model="spotName" placeholder="Spot Name">
       </div>
     </div>
     <div class="control-group">
