New yelp id help label.

--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -12,7 +12,7 @@
       <label class="control-label" for="inputYelpId">Yelp ID</label>
       <div class="controls">
         <input type="text" id="inputYelpId" ng-model="yelp_id" placeholder="Yelp ID">
-        <a class="clickable" ng-click="yelpIdHelp()">What's This?</a>
+        <a class="clickable" ng-click="yelpIdHelp()">How to find a Yelp ID?</a>
       </div>
     </div>
 
