--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -56,7 +56,8 @@
         events="eventsProperty"
         refresh="!isMapElementHidden"
         style="height: 260px; width: 280px; border: 1px solid;">
-      </div> 
+      </div>
+      <a class="edit-spot" ng-href="editSpot/{{spot.id}}">Edit Spot</a>
     </div>
   </div>
 
