Fix Edit Spot link to call controller function.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -57,7 +57,7 @@
         refresh="!isMapElementHidden"
         style="height: 260px; width: 280px; border: 1px solid;">
       </div>
-      <a class="edit-spot" ng-href="editSpot/{{spot.id}}">Edit Spot</a>
+      <a class="edit-spot" ng-click="editSpot()">Edit Spot</a>
     </div>
   </div>
 
