--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1001,7 +1001,8 @@ input[type='text']:focus {
 *******************/
 #add-review-page,
 #add-watch-page,
-#add-spot-page {
+#add-spot-page,
+#edit-spot-page {
   background-color: $acc-light;
   border-radius: 10px;
   padding: 10px 0 10px 20px;
@@ -1068,7 +1069,8 @@ input[type='text']:focus {
   }
 }
 
-#add-spot-page {
+#add-spot-page,
+#edit-spot-page {
 
   h3 {
     margin-bottom: 10px;
