Made map fixed on scroll on listings page. Required addition of jQuery.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="side-col">
+    <div scroll-position="scroll" class="side-col" ng-class="{fixed: scroll > 220, relative: scroll <= 220}">
 	    <div class="google-map"
         center="position.coords"
         zoom="zoomProperty"
