--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -693,6 +693,16 @@ input[type='text']:focus {
     margin: 0 0 0 20px;
   }
 
+  .fixed {
+    position: fixed;
+    margin-top: -220px;
+    margin-left: 8px;
+  }
+
+  .relative {
+    position: relative;
+  }
+
   .more {
     margin: -10px 0 0 0;
 
