--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -52,6 +52,16 @@
         <button type="submit" class="btn" ng-click="addWatch()">Add Crowd Watch</button>
       </div>
     </div>
+
+    <div class="control-group add-multiple">
+      <label class="control-label">Add Multiple Watches</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="addMultipleWatches" ng-model="multipleWatches" value="multipleWatches">
+        </label>
+      </div>
+    </div>
+
   </form>
 </div>
 
