Fix add watch page so name and address are updated dynamically.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1011,6 +1011,7 @@ input[type='text']:focus {
 *******************/
 #add-review-page,
 #add-watch-page,
+#add-multiple-page,
 #add-spot-page,
 #edit-spot-page {
   background-color: $acc-light;
