--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -1,8 +1,8 @@
 <div id="add-watch-page">
   <h3>Add a Crowd Watch:</h3>
 
-  <h4>Philz Coffee</h4>
-  <h5>448 Forest Ave, Palo Alto</h5>
+  <h4>{{name}}<h4>
+  <h5>{{address}}, {{city}}</h5>
 
   <form class="form-horizontal">
     
